--- a/src/pages/en/guides/migrate-to-astro/from-docusaurus.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-docusaurus.mdx
@@ -24,7 +24,7 @@ Docusaurus and Astro share some similarities that will help you migrate your pro
 
 When you rebuild your Docusaurus site in Astro, you will notice some important differences:
 
-- Docusaurus is a React-based single-page application (SPA). Astro sites are multi-page apps built using `.astro` components, but can also support React, Preact, Vue.js, Svelte, SolidJS, AlpineJS, Lit and raw HTML templating.
+- Docusaurus is a React-based single-page application (SPA). Astro sites are [multi-page apps](/en/concepts/mpa-vs-spa/) built using `.astro` components, but can also support React, Preact, Vue.js, Svelte, SolidJS, AlpineJS, Lit and raw HTML templating.
 
 - Docusaurus was designed to build documentation websites and has some built-in, documentation-specific website features that you would have to build yourself in Astro. Instead, Astro offers some documentation-specific features through an [official docs theme](https://github.com/withastro/astro/tree/latest/examples/docs). This website was built using that template!
 
