--- a/src/pages/en/guides/migrate-to-astro/from-eleventy.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-eleventy.mdx
@@ -28,6 +28,8 @@ When you rebuild your Eleventy (11ty) site in Astro, you will notice some import
 
 - Astro uses a `public/` folder for static assets that do not need to be processed nor transformed during the build.
 
+- In Eleventy, bundling CSS, JavaScript, and other assets needs to be configured manually. Astro handles this for you out-of-the-box.
+
 ## Switch from Eleventy to Astro
 
 To convert an Eleventy blog to Astro, start with our blog theme starter template, or explore more community blog themes in our [theme showcase](https://astro.build/themes/). Bring your existing Markdown (or MDX, with our optional integration) files as content to [create Markdown or MDX pages](/en/guides/markdown-content/).
