--- a/src/pages/en/guides/migrate-to-astro/from-jekyll.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-jekyll.mdx
@@ -23,7 +23,7 @@ Jekyll and Astro share some similarities that will help you migrate your project
 
 When you rebuild your Jekyll site in Astro, you will notice some important differences:
 
-- As Jekyll is primarily a blogging platform, several blog features are built-in that you may have to build yourself in Astro, or choose a template theme that includes these features. Jekyll has built-in support for tags and categories which you will find in several Astro blog themes, but is not an included feature. Content collections are still an experimental feature in Astro and should be released in v2.
+- As Jekyll is primarily a blogging platform, several blog features are built-in that you may have to build yourself in Astro, or choose a template theme that includes these features. Jekyll has built-in support for tags and categories which you will find in several Astro blog themes, but is not included in a minimal Astro project.
 
 - While Jekyll uses Liquid templates for reusable layout elements, Astro is entirely component-based. Any `.astro` file can be a component, a layout or an entire page, and can import and render any other Astro components. Astro components can also render other UI framework components (e.g. React, Svelte, Vue, Solid) as well as content or metadata from other files in your project, such as Markdown or MDX.
 
