--- a/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -16,7 +16,7 @@ Nuxt and Astro share some similarities that will help you migrate your project:
 
 - Astro has [an official integration for using Vue components](/en/guides/integrations-guide/vue/) and support for NPM packages and community integrations, including several for Vue. You will be able to write Vue UI components for interactivity, and may be able to keep some or all of your existing Nuxt Vue components and dependencies.
 
-- Astro and Nuxt both allow you to use Headless CMSs, APIs or Markdown files for data. You can continue to use your preferred authoring system, and will be able to keep your existing content.
+- Astro and Nuxt both allow you to use a Headless CMS, APIs or Markdown files for data. You can continue to use your preferred authoring system, and will be able to keep your existing content.
 
 ## Key Differences between Nuxt and Astro
 
