edit: src/content/config -> content.config.ts

--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -121,7 +121,7 @@ For example, you can use this structure for internationalization:
 
 ## Configuring collections
 
-You can configure your content collections with an optional `src/content/config.ts` file (`.js` and `.mjs` extensions are also supported). 
+You can configure your content collections with an optional `content.config.ts` file. 
 
 This file currently allows you to [define a collection schema](#defining-a-collection-schema), and to [create custom slugs](#custom-entry-slugs) for your collections.
 
@@ -129,7 +129,7 @@ This file currently allows you to [define a collection schema](#defining-a-colle
 
 Schemas are an optional way to enforce frontmatter types in a collection. Astro uses [Zod](https://github.com/colinhacks/zod) to validate your frontmatter with schemas in the form of [Zod objects](https://github.com/colinhacks/zod#objects).
 
-To configure schemas, create a `src/content/config.ts` file (`.js` and `.mjs` extensions are also supported). This file should:
+To configure schemas, create a `content.config.ts` file at the base of your project. This file should:
 
 1. Import the `defineCollection` and `z` utilities from `astro:content`. 
 2. Define a `schema` for each collection.
@@ -140,7 +140,7 @@ For example, say you maintain two collections: one for release announcements and
 You can specify each expected property in the `schema` field of `defineCollection`:
 
 ```ts
-// src/content/config.ts
+// content.config.ts
 import { z, defineCollection } from 'astro:content';
 
 const releases = defineCollection({
@@ -219,7 +219,7 @@ If you want to generate custom slugs for each entry, you can provide a `slug()` 
 For example, to use a frontmatter `permalink` property as the slug for your blog pages instead of the file path, you can use the following `slug()` function. For extra safety, conditionally return the entry's `defaultSlug` as a fallback.
 
 ```ts {5-9}
-// src/content/config.ts
+// content.config.ts
 import { defineCollection, z } from 'astro:content';
 
 const blog = defineCollection({
