fix post.slug in example
slug is not available in `data` its directly available as a child of `post`.

--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -311,7 +311,7 @@ const blogPosts = await getCollection('blog', ({ data }) => {
 <ul>
   {blogPosts.map(post => (
     <li>
-      <a href={post.data.slug}>{post.data.title}</a>
+      <a href={post.slug}>{post.data.title}</a>
       <time datetime={post.data.publishedDate.toISOString()}>
         {post.data.publishedDate.toDateString()}
       </time>
