--- a/src/pages/es/core-concepts/project-structure.mdx
+++ b/src/pages/es/core-concepts/project-structure.mdx
@@ -6,7 +6,7 @@ i18nReady: true
 ---
 import FileTree from '~/components/FileTree.astro'
 
-Tu nuevo proyecto Astro generado a partir del asistente de instalación `create-astro` incluye algunos archivos y carpetas por defecto. Otros, los crearás tú mismo y los agregarás a la estructura de archivos existente.
+Tu nuevo proyecto Astro generado a partir del asistente de instalación `create astro` incluye algunos archivos y carpetas por defecto. Otros, los crearás tú mismo y los agregarás a la estructura de archivos existente.
 
 Así es como se organiza un proyecto de Astro y algunos archivos que encontrarás en tu nuevo proyecto.
 ## Carpetas y archivos
