--- a/src/pages/es/guides/server-side-rendering.mdx
+++ b/src/pages/es/guides/server-side-rendering.mdx
@@ -5,6 +5,7 @@ i18nReady: true
 ---
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
+import Since from '~/components/Since.astro';
 
 
 **Renderizado en el servidor**, también conocido como SSR (server side rendering), se puede habilitar en Astro. Cuando habilitas SSR puedes:
@@ -101,6 +102,22 @@ También puedes añadir un adaptador manualmente instalando el paquete y actuali
 
 Astro seguirá siendo un generador de sitios estáticos por defecto. Pero una vez que habilites un adaptador de renderizado en el servidor, **cada ruta en la carpeta de páginas se convertirá en una ruta renderizada por el servidor** y algunas características nuevas estarán disponibles para ti.
 
+### Prerenderizado
+
+Since v="2.0.0-beta.0" />
+
+Cualquier archivo `.astro` dentro de `pages/` puede optar por el prerenderizado, o el comportamiento estático de construcción estándar, incluyendo la siguiente línea.
+
+```astro title="src/pages/index.astro" {2}
+---
+export const prerender = true;
+// ...
+---
+<html>
+  <!-- Página aquí... -->
+</html>
+```
+
 ### `Astro.request.headers`
 
 Los encabezados de la solicitud están disponibles en `Astro.request.headers`. Es un objeto [Headers](https://developer.mozilla.org/en-US/docs/Web/API/Headers), es un objeto similar a un Map donde puedes recuperar encabezados como la cookie.
@@ -120,6 +137,28 @@ Las características listadas a continuación solo están disponibles a nivel de
 
 Esto se debe a que estas características [modifican las respuestas de los *headers*](https://developer.mozilla.org/es/docs/Glossary/Response_header), los cuales no pueden ser modificados después de ser enviados al navegador. En modo SSR, Astro usa *HTML streaming* para enviar cada componente al navegador mientras los renderiza. Esto asegura que el usuario vea tu HTML lo más rápido posible, pero también significa que para el momento que Astro ejecuta el código de tu componente, ya se ha enviado los *Response headers*.
 :::
+
+### `Astro.cookies`
+
+Esta es una utilidad para leer y modificar una sola cookie. Te permite comprobar, establecer, obtener y eliminar una cookie.
+
+Ve más detalles sobre [`Astro.cookies` y el tipo `AstroCookie`](/es/reference/api-reference/#astrocookies) en la referencia de la API.
+
+El ejemplo a continuación actualiza el valor de una cookie para un contador de vistas de página.
+
+```astro title="src/pages/index.astro" {4,5,9}
+---
+let counter = 0
+if(Astro.cookies.has("counter")){
+  const cookie = Astro.cookies.get("counter")
+	counter = cookie.number() + 1
+}
+Astro.cookies.set("counter",counter)
+---
+<html>
+  <h1>Contador = {counter}</h1>
+</html>
+```
 
 ### `Astro.redirect`
 
