--- a/src/pages/es/guides/styling.mdx
+++ b/src/pages/es/guides/styling.mdx
@@ -499,7 +499,7 @@ import rawStylesCSS from '../styles/main.css?raw';
 <style is:inline set:html={rawStylesCSS}></style>
 ```
 
-Consulta la [documentación de Vite](https://vitejs.dev/guide/assets.html#importing-asset-as-url) para obtener más detalles.
+Consulta la [documentación de Vite](https://vitejs.dev/guide/assets.html#importing-asset-as-string) para obtener más detalles.
 
 ###  Importaciones `?url` de CSS
 
