--- a/src/pages/es/guides/rss.mdx
+++ b/src/pages/es/guides/rss.mdx
@@ -14,6 +14,8 @@ Astro proporciona una generación rápida y automática de RSS feeds para blogs 
 
 El paquete `@astrojs/rss` provee helper functions para generar RSS feeds utilizando [API endpoints](/es/core-concepts/endpoints/#endpoints-de-archivos-estáticos). Esto desbloquea la generación de RSS feeds para builds estáticos _y_ on-demand para cuando utilizamos un [adaptador SSR](/es/guides/server-side-rendering/#añadiendo-un-adaptador).
 
+El [paquete `@astrojs/rss`](https://github.com/withastro/astro/tree/main/packages/astro-rss) provee helpers para generar RSS feeds utilizando [API endpoints](/es/core-concepts/endpoints/#endpoints-de-archivos-estáticos). Esto desbloquea la generación de RSS feeds para builds estáticos _y_ on-demand para cuando utilizamos un [adaptador SSR](/es/guides/server-side-rendering/#añadiendo-un-adaptador).
+
 Primero, instala `@astrojs/rss` utilizando tu gestor de paquetes favorito:
 
 <PackageManagerTabs>
