edit: clarify `content` intro
Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>

--- a/src/pages/en/guides/rss.mdx
+++ b/src/pages/en/guides/rss.mdx
@@ -134,7 +134,7 @@ export async function get(context) {
 
 <Since v="1.6.14" />
 
-Items also accept a `content` key containing the full content of the post as HTML.
+The `content` key contains the full content of the post as HTML. This allows you to make your entire post content available to RSS feed readers.
 
 :::tip
 Whenever you're using HTML content in XML, suggest using a package like [`sanitize-html`](https://www.npmjs.com/package/sanitize-html) in order to make sure that your content is properly sanitized, escaped, and encoded.
