edit: clarify MDX behavior when rendering content

--- a/src/pages/en/guides/rss.mdx
+++ b/src/pages/en/guides/rss.mdx
@@ -136,7 +136,7 @@ The `content` key contains the full content of the post as HTML. This allows you
 Whenever you're using HTML content in XML, suggest using a package like [`sanitize-html`](https://www.npmjs.com/package/sanitize-html) in order to make sure that your content is properly sanitized, escaped, and encoded.
 :::
 
-When using content collections, render the post `body` using a standard Markdown parser like [`markdown-it`](https://github.com/markdown-it/markdown-it) and sanitizing the result:
+When using content collections, render the post `body` using a standard Markdown parser like [`markdown-it`](https://github.com/markdown-it/markdown-it) and sanitize the result:
 
 ```js title="src/pages/rss.xml.js" ins={2, 3, 4, 14}
 import rss from '@astrojs/rss';
@@ -152,6 +152,7 @@ export async function get(context) {
     site: context.site,
     items: blog.map((post) => ({
       link: `/blog/${post.slug}/`,
+      // Note: this will not process components or JSX expressions in MDX files.
       content: sanitizeHtml(parser.render(post.body)),
       ...post.data,
     })),
@@ -159,7 +160,7 @@ export async function get(context) {
 }
 ```
 
-When using glob imports with Markdown specifically, we suggest using the `compiledContent()` helper to retrieve the rendered HTML for sanitization:
+When using glob imports with Markdown, we suggest using the `compiledContent()` helper to retrieve the rendered HTML for sanitization. Note this feature is **not** supported for MDX files.
 
 ```js title="src/pages/rss.xml.js" ins={2, 13}
 import rss from '@astrojs/rss';
