--- a/src/pages/en/guides/rss.mdx
+++ b/src/pages/en/guides/rss.mdx
@@ -160,7 +160,7 @@ export async function get(context) {
 }
 ```
 
-When using glob imports with Markdown, we suggest using the `compiledContent()` helper to retrieve the rendered HTML for sanitization. Note this feature is **not** supported for MDX files.
+When using glob imports with Markdown, we suggest using the `compiledContent()` helper to retrieve the rendered HTML for sanitization. Note: this feature is **not** supported for MDX files.
 
 ```js title="src/pages/rss.xml.js" ins={2, 13}
 import rss from '@astrojs/rss';
