Corrected the way to use imported images in a regular img tag
As pointed out in [this support thread](https://discord.com/channels/830184174198718474/1065656313784307722/1065656313784307722) the way that the docs say you need to import images into a normal <img> tag is inaccurate. This corrects that

--- a/src/pages/en/guides/images.mdx
+++ b/src/pages/en/guides/images.mdx
@@ -26,7 +26,7 @@ import rocket from '../images/rocket.svg';
 <img src="/assets/stars.png" alt="A starry night sky.">
 
 <!-- Local image stored at src/images/rocket.svg -->
-<img src={rocket} alt="A rocketship in space."/>
+<img src={rocket.src} alt="A rocketship in space."/>
 ```
 
 ### In Markdown files
@@ -62,7 +62,7 @@ import rocket from '../images/rocket.svg';
 # My MDX Page
 
 // Local image stored at src/images/rocket.svg
-<img src={rocket} alt="A rocketship in space."/>
+<img src={rocket.src} alt="A rocketship in space."/>
 
 // Local image stored at public/assets/stars.png
 ![A starry night sky.](/assets/stars.png)
@@ -95,7 +95,7 @@ Import them from a **relative file path** or [import alias](/en/guides/aliases/)
 // Access images in `src/images/`
 import logo from '../images/logo.png';
 ---
-<img src={logo} width="40" alt="Astro" />
+<img src={logo.src} width="40" alt="Astro" />
 ```
 
 ### `public/`
