rephrase tailwind plugin
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/src/pages/en/guides/styling.mdx
+++ b/src/pages/en/guides/styling.mdx
@@ -487,7 +487,7 @@ Any Astro styling methods are available to a [Markdown layout component](/en/cor
 
 You can apply global styles to your Markdown content by adding [`<style>` tags](#global-styles) and [imported stylesheets](#external-styles) to the layout that wraps your page content. You can also add [CSS integrations](#css-integrations) including [Tailwind](/en/guides/integrations-guide/tailwind/).
 
-Additionally, you can install and use [Markdown plugins](/en/guides/markdown-content/#markdown-plugins) such as the [Tailwind/typography plugin](https://tailwindcss.com/docs/typography-plugin) for styling Markdown.
+If you are using Tailwind, the [typography plugin](https://tailwindcss.com/docs/typography-plugin) can be useful for styling Markdown.
 
 ## Advanced
 
