--- a/src/pages/en/guides/upgrade-to/v2.mdx
+++ b/src/pages/en/guides/upgrade-to/v2.mdx
@@ -230,7 +230,7 @@ export default defineConfig({
 Revisit your Markdown and MDX configuration and compare your existing config with the new options available.
 
 
-### Added: Plugin access to frontmatter
+### Changed: Plugin access to frontmatter
 
 In 1.0, remark and rehype plugins did not have access to user frontmatter. Astro merged plugin frontmatter with your file's frontmatter, without passing the file frontmatter to your plugins.
 
@@ -240,6 +240,32 @@ Astro 2.0 gives remark and rehype plugins access to user frontmatter via frontma
 #### What should I do?
 
 Check any remark and rehype plugins you have written to see whether their behavior has changed. Note that `data.astro.frontmatter` is now the _complete_ Markdown or MDX document's frontmatter, rather than an empty object.
+
+### Changed: RSS Configuration
+
+In 1.0, Astro's RSS package allowed you to use `items: import.meta.glob(...)` to generate a list of RSS feed items. This usage is now deprecated and will eventually be removed.
+
+Astro 2.0 introduces a `pagesGlobToRssItems()` wrapper to the `items` property.
+
+
+#### What should I do?
+
+Import, then wrap your existing function containing `import.meta.glob()` with the `pagesGlobToRssItems()` helper.
+
+```js ins={3, 8, 10}
+// src/pages/rss.xml.js
+import rss, {
+   pagesGlobToRssItems
+} from '@astrojs/rss';
+
+export function get(context) {
+  return rss({
+     items: pagesGlobToRssItems(
+      import.meta.glob('./blog/*.{md,mdx}'),
+     ),
+  });
+}
+```
 
 ### Removed: `legacy.astroFlavoredMarkdown`
 
