--- a/src/pages/en/tutorial/5-astro-api/4.mdx
+++ b/src/pages/en/tutorial/5-astro-api/4.mdx
@@ -75,15 +75,17 @@ Individuals can subscribe to your feed in a feed reader, and receive a notificat
 
     ```js title="src/pages/rss.xml.js"
 
-    import rss from '@astrojs/rss';
+    import rss, { pagesGlobToRssItems } from '@astrojs/rss';
 
-    export const get = () => rss({
-      title: 'Astro Learner | Blog',
-      description: 'My journey learning Astro',
-      site: 'https://my-blog-site.netlify.app',
-      items: import.meta.glob('./**/*.md'),
-      customData: `<language>en-us</language>`,
-    });
+    export async function get() {
+      return rss({
+        title: 'Astro Learner | Blog',
+        description: 'My journey learning Astro',
+        site: 'https://my-blog-site.netlify.app',
+        items: await pagesGlobToRssItems(import.meta.glob('./**/*.md')),
+        customData: `<language>en-us</language>`,
+      });
+    }
     ```
 
 3. This `rss.xml` document is only created when your site is built, so you won't be able to see this page in your browser during development. Quit the dev server and run the following commands to first, build your site locally and then, view a preview of your build:
@@ -134,4 +136,4 @@ Individuals can subscribe to your feed in a feed reader, and receive a notificat
 
 ### Resources
 
-- [RSS item generation in Astro](/en/guides/rss/#1-importmetaglob-result)
+- [RSS item generation in Astro](/en/guides/rss/#using-glob-imports)
