content collections in styling, markdown pages (#2409)
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/src/pages/en/guides/styling.mdx
+++ b/src/pages/en/guides/styling.mdx
@@ -481,6 +481,13 @@ Vue in Astro supports the same methods as `vue-loader` does:
 
 Svelte in Astro also works exactly as expected: [Svelte Styling Docs][svelte-style].
 
+## Markdown Styling
+
+Any Astro styling methods are available to a [Markdown layout component](/en/core-concepts/layouts/#markdownmdx-layouts).
+
+You can apply global styles to your Markdown content by adding [`<style>` tags](#global-styles) and [imported stylesheets](#external-styles) to the layout that wraps your page content. You can also add [CSS integrations](#css-integrations) including [Tailwind](/en/guides/integrations-guide/tailwind/).
+
+If you are using Tailwind, the [typography plugin](https://tailwindcss.com/docs/typography-plugin) can be useful for styling Markdown.
 
 ## Advanced
 
