--- a/src/pages/pt-br/core-concepts/astro-pages.mdx
+++ b/src/pages/pt-br/core-concepts/astro-pages.mdx
@@ -20,6 +20,8 @@ Astro suporta os seguintes tipos de arquivo no diretório `src/pages/`:
 
 Astro se beneficia de uma estratégia de roteamento chamada **roteamento baseado em arquivos**. Cada arquivo em seu diretório `src/pages` se torna um endpoint no seu site com base no seu caminho de arquivo.
 
+Um único arquivo também pode gerar múltiplas páginas utilizando [roteamento dinâmico](/pt-br/core-concepts/routing/#rotas-dinâmicas). Isso te permite criar páginas mesmo que seu conteúdo esteja fora do diretório especial `/pages/`, como em uma [coleção de conteúdo](/pt-br/guides/content-collections/#rendering-entry-content) ou em um [CMS](/pt-br/guides/cms/).
+
 📚 Leia mais sobre [Roteamento no Astro](/pt-br/core-concepts/routing/).
 
 ### Link entre páginas
@@ -61,6 +63,8 @@ import LayoutDoMeuSite from '../layouts/LayoutDoMeuSite.astro';
 ## Páginas Markdown/MDX
 
 Astro também trata quaisquer arquivos Markdown (`.md`) dentro de `src/pages/` como páginas no seu website final. Se você tiver a [Integração MDX instalada](/pt-br/guides/integrations-guide/mdx/#installation), ele também irá tratar arquivos MDX (`.mdx`) da mesma forma. Eles são comumente utilizados para páginas cheias de texto como postagens de um blog e documentação.
+
+[Coleções de conteúdo de páginas Markdown ou MDX](/pt-br/guides/content-collections/) em `src/content/` podem ser utilizados para [gerar páginas dinamicamente](/pt-br/core-concepts/routing/#rotas-dinâmicas).
 
 Layouts de página são especialmente úteis para [arquivos Markdown](#páginas-markdownmdx). Arquivos MMarkdown podem utilizar a propriedade especial `layout` do frontmatter para especificar um [componente de layout](/pt-br/core-concepts/layouts/) que irá envolver seu conteúdo Markdown em uma página de documento `<html>...</html>` completo.
 
